--- a/.env
+++ b/.env
@@ -12,7 +12,7 @@ NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=body.css-settings-manager { } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }
 STYLE_SETTINGS_BODY_CLASSES=theme-dark mod-linux is-frameless is-hidden-frameless obsidian-app styled-scrollbars show-inline-title show-ribbon show-view-header css-settings-manager ribbon-default editor-bg-default file-header-default sb-default sb-item-default is-focused
 USE_FULL_RESOLUTION_IMAGES=false
-THEME=https://raw.githubusercontent.com/regawaras/Coffee/HEAD/theme.css
+THEME=https://raw.githubusercontent.com/FireIsGood/obsidian-everforest-enchanted/HEAD/theme.css
 BASE_THEME=dark
 dgHomeLink=true
 dgPassFrontmatter=false
@@ -23,4 +23,4 @@ dgShowFileTree=true
 dgEnableSearch=true
 dgShowToc=true
 dgLinkPreview=true
-dgShowTags=true
+dgShowTags=false
